--- a/css/style.css
+++ b/css/style.css
@@ -352,10 +352,10 @@ main {
 .products-block {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
 }
 
 .products-item {
+  margin: 0 8px;
   height: 410px;
   display: flex;
   flex-direction: column;
@@ -564,7 +564,7 @@ main {
   position: absolute;
   right:0;
   top:920px;
-  width: 300px;
+  width: 340px;
   height: 50px;
   display: flex;
   align-items: center;
@@ -874,9 +874,6 @@ width: 120px;
   .products-shooter-text{
     margin-left: 0;
   }
-  .products-block{
-    justify-content: space-evenly;
-  }
   .products-shooter{
     justify-content: space-evenly;
   }
@@ -905,6 +902,13 @@ width: 120px;
   .love-text{
     margin-top: 50px;
   }
+}
+@media screen and (max-width: 1152px){
+  
+  .products-block{
+    justify-content: space-evenly;
+  }
+
 }
 @media screen and (max-width: 960px){
   .products-shooter{
