--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,9 @@
   background: url(../img/header-main.png) center center no-repeat;
   margin-bottom: 80px;
 }
-
+button{
+  cursor: pointer;
+}
 nav {
   height: 70px;
   background: rgba(0,0,0,.6);
@@ -355,6 +357,7 @@ main {
 }
 
 .products-item {
+  text-decoration: none;
   margin: 0 8px;
   height: 410px;
   display: flex;
